freest/test/prog/Invalid/SessionTypes/ReceiveTypePatOnTypeOutChannel/ReceiveTypePatOnTypeOutChannel.fst
module ReceiveTypePatOnTypeOutChannel where

foo : (!!(a : *T). Skip) -> ()
foo (??a. _) = ()